src/components/updatenode.css
.updatenode__controls {
    position: absolute;
    right: 10px;
    top: 10px;
    z-index: 4;
    font-size: 12px;
    border: 2px solid gray ;
    border-radius: 5px;
    padding: 10px;
    color: white;
  }
  .fieldtextcol{
    color: black
  }
  
  .updatenode__controls label {
    display: block;
    border: 2px;
 
  }
  
  .updatenode__bglabel {
    margin-top: 10px;
    border: 2px;
  
  }
  

